--- a/Email/style/style.css
+++ b/Email/style/style.css
@@ -6,7 +6,9 @@
 
 html {
     font-style: italic;
-    color: white;    
+    color: black;   
+    font-weight: bolder; 
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 body {
@@ -18,10 +20,13 @@ body {
     max-width: 1400px;
     margin: 5rem auto;
     padding: 5rem;
-    background: tomato;
+    background: yellow;
     border-radius: 25px;
     text-align: center;
     font-size: 1.5rem;
     line-height: 3rem;
+}
 
+.red {
+    color: red;
 }
